# recommendation-systems-research

./: .gitignore  README.md  pyproject.toml
notebooks/: Q-Learning - Data Owner 2.ipynb  mcfl_create_plan.ipynb  shared.py
notebooks/duet_distributed_q_learning/: Q-Learning - Data Owner 1.ipynb  Q-Learning - Data Scientist.ipynb
notebooks/pygrid_federated_dqn/: Data Owner.ipynb  Data Scientist.ipynb
notebooks/pygrid_federated_q_learning/: Data Owner.ipynb
notebooks/pygrid_federated_q_learning_blackjack/: Data Scientist.ipynb
notebooks/pygrid_federated_q_learning_cartpole/: Data Owner.ipynb  Data Scientist.ipynb
scripts/: start_grid_domain.sh
src/: single_agent_q_learning.py  test_multi_agent_q_learning.py
src/centralized_q_learning/: multi_agent_q_learning.py  single_agent_discretized_q_learning.py
src/duet_distributed_q_learning/: README.md  data_owner.py  data_scientist.py  shared.py
src/pygrid_federated_dqn/: config.py  data_owner.py  data_scientist.py
src/pygrid_federated_q_learning/: data_owner.py
src/pygrid_federated_q_learning_blackjack/: config.py  data_scientist.py
src/pygrid_federated_q_learning_cartpole/: config.py  data_owner.py  data_scientist.py  utils.py
