[tool.poetry]
name = "recommendation-systems-research"
version = "0.0.0"
description = "Research into recommendation systems"
authors = ["willclarktech <willclarktech@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gym = "^0.18.0"
jupyter = "^1.0.0"
numpy = "^1.20.2"
syft = {git = "https://github.com/OpenMined/PySyft.git", rev = "0.5.0rc1"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pylint = "^2.7.4"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
